crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_full_file_snippet.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderUtf8
  text: "@UTF8"
- kind: Newline
  text: "\n"
- kind: HeaderBegin
  text: "@Begin"
- kind: Newline
  text: "\n"
- kind: HeaderPrefix
  text: "@Languages:\t"
- kind: LanguageCode
  text: eng
- kind: Newline
  text: "\n"
- kind: HeaderPrefix
  text: "@Participants:\t"
- kind: ParticipantWord
  text: CHI
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Child
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: MOT
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Mother
- kind: Newline
  text: "\n"
- kind: HeaderPrefix
  text: "@ID:\t"
- kind: "IdFields { language: \"eng\", corpus: \"corpus\", speaker: \"CHI\", age: \"3;00.\", sex: \"\", group: \"\", ses: \"\", role: \"Child\", education: \"\", custom: \"\" }"
  text: eng
- kind: Newline
  text: "\n"
- kind: Star
  text: "*"
- kind: Speaker
  text: CHI
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"hello\", prefix: None, body: \"hello\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: hello
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
- kind: TierPrefix
  text: "%mor:\t"
- kind: "MorWord { pos: \"n\", lemma_features: \"hello\" }"
  text: n
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
- kind: HeaderEnd
  text: "@End"
- kind: Newline
  text: "\n"
