crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_gra.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: "GraRelation { index: \"1\", head: \"4\", relation: \"NSUBJ\" }"
  text: "1"
- kind: Whitespace
  text: " "
- kind: "GraRelation { index: \"2\", head: \"1\", relation: \"AUX\" }"
  text: "2"
- kind: Whitespace
  text: " "
- kind: "GraRelation { index: \"3\", head: \"4\", relation: \"NSUBJ\" }"
  text: "3"
- kind: Whitespace
  text: " "
- kind: "GraRelation { index: \"4\", head: \"0\", relation: \"ROOT\" }"
  text: "4"
- kind: Whitespace
  text: " "
- kind: "GraRelation { index: \"5\", head: \"4\", relation: \"OBJ\" }"
  text: "5"
- kind: Whitespace
  text: " "
- kind: "GraRelation { index: \"6\", head: \"4\", relation: \"PUNCT\" }"
  text: "6"
- kind: Newline
  text: "\n"
