crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_id_minimal.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@ID:\t"
- kind: "IdFields { language: \"eng\", corpus: \"corpus\", speaker: \"MOT\", age: \"\", sex: \"\", group: \"\", ses: \"\", role: \"Mother\", education: \"\", custom: \"\" }"
  text: eng
- kind: Newline
  text: "\n"
