crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_languages.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Languages:\t"
- kind: LanguageCode
  text: eng
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: LanguageCode
  text: fra
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: LanguageCode
  text: zho
- kind: Newline
  text: "\n"
