crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_main_tier_compound.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: Star
  text: "*"
- kind: Speaker
  text: CHI
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"I\", prefix: None, body: \"I\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: I
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"want\", prefix: None, body: \"want\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: want
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"ice+cream\", prefix: None, body: \"ice+cream\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: ice+cream
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
