crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_main_tier_rich.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: Star
  text: "*"
- kind: Speaker
  text: CHI
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"&-um\", prefix: Some"
  text: "&-um"
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \""
  text: (be)cause
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"mama@f\", prefix: None, body: \"mama\", form_marker: Some"
  text: mama@f
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"no::\", prefix: None, body: \"no::\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: "no::"
- kind: Whitespace
  text: " "
- kind: TrailingOff
  text: +...
- kind: Whitespace
  text: " "
- kind: Postcode
  text: bch
- kind: Newline
  text: "\n"
